--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -1,14 +1,9 @@
-/* Dark mode colors */
 :root[data-theme='black'] {
     --sl-color-accent-low: #9ca3af;
-    /* gris clair */
     --sl-color-accent: #6b7280;
-    /* gris médian */
     --sl-color-accent-high: #d1d5db;
-    /* gris très clair */
 
     --sl-color-white: #f9fafb;
-    /* presque blanc */
     --sl-color-gray-1: #f3f4f6;
     --sl-color-gray-2: #e5e7eb;
     --sl-color-gray-3: #d1d5db;
@@ -16,10 +11,25 @@
     --sl-color-gray-5: #6b7280;
     --sl-color-gray-6: #4b5563;
     --sl-color-black: #374151;
-    /* base demandée */
+
+
+    --color-tip-bg: #052e16;
+    --color-tip-border: #22c55e;
+    --color-tip-text: #bbf7d0;
+
+    --color-warning-bg: #422006;
+    --color-warning-border: #facc15;
+    --color-warning-text: #fde68a;
+
+    --color-info-bg: #082f49;
+    --color-info-border: #3b82f6;
+    --color-info-text: #bfdbfe;
+
+    --color-danger-bg: #450a0a;
+    --color-danger-border: #ef4444;
+    --color-danger-text: #fecaca;
 }
 
-/* Light mode colors */
 :root[data-theme='light'] {
     --sl-color-accent-low: #f3f4f6;
     --sl-color-accent: #374151;
@@ -28,7 +38,6 @@
     --sl-color-white: #111827;
     --sl-color-black: #ffffff;
 
-    /* Nuances de gris pour surfaces et bordures */
     --sl-color-gray-7: #f9fafb;
     --sl-color-gray-6: #f3f4f6;
     --sl-color-gray-5: #e5e7eb;
@@ -36,6 +45,22 @@
     --sl-color-gray-3: #9ca3af;
     --sl-color-gray-2: #6b7280;
     --sl-color-gray-1: #374151;
+
+    --color-tip-bg: #f0fdf4;
+    --color-tip-border: #22c55e;
+    --color-tip-text: #166534;
+
+    --color-warning-bg: #fefce8;
+    --color-warning-border: #facc15;
+    --color-warning-text: #713f12;
+
+    --color-info-bg: #eff6ff;
+    --color-info-border: #3b82f6;
+    --color-info-text: #1e3a8a;
+
+    --color-danger-bg: #fef2f2;
+    --color-danger-border: #ef4444;
+    --color-danger-text: #7f1d1d;
 }
 
 :root {
@@ -65,4 +90,65 @@
         font-size: 20px;
         font-weight: 500;
     }
+}
+
+/* ----------- CALLOUT ----------- */
+
+.callout {
+    display: flex;
+    flex-direction: column;
+    border-left-width: 4px;
+    border-radius: 0.5rem;
+    border: solid 1px transparent;
+    padding: 1rem;
+    margin: 1rem 0;
+    gap: 5px;
+}
+
+/* Titre */
+.callout-title {
+    display: flex;
+    align-items: center;
+
+    margin: 0;
+    gap: 6px;
+    font-weight: 600;
+}
+
+.callout-title-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 18px;
+    margin: 0;
+}
+
+.callout-title-text {
+    font-size: 18px;
+    margin: 0;
+}
+
+/* Variantes */
+.callout[data-callout=tip] {
+    border-color: var(--color-tip-border);
+    background: var(--color-tip-bg);
+    color: var(--color-tip-text);
+}
+
+.callout[data-callout=caution] {
+    border-color: var(--color-warning-border);
+    background: var(--color-warning-bg);
+    color: var(--color-warning-text);
+}
+
+.callout[data-callout=info] {
+    border-color: var(--color-info-border);
+    background: var(--color-info-bg);
+    color: var(--color-info-text);
+}
+
+.callout[data-callout=danger] {
+    border-color: var(--color-danger-border);
+    background: var(--color-danger-bg);
+    color: var(--color-danger-text);
 }
