--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -74,6 +74,11 @@
         }
     }
 
+    img {
+        border-radius: 12px;
+        max-width: 600px;
+    }
+
     .site-title span {
         display: none !important;
     }
