--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -42,9 +42,9 @@
     --sl-color-gray-6: #f3f4f6;
     --sl-color-gray-5: #e5e7eb;
     --sl-color-gray-4: #d1d5db;
-    --sl-color-gray-3: #9ca3af;
-    --sl-color-gray-2: #6b7280;
-    --sl-color-gray-1: #374151;
+    --sl-color-gray-3: #71757c;
+    --sl-color-gray-2: #4d525b;
+    --sl-color-gray-1: #252d39;
 
     --color-tip-bg: #f0fdf4;
     --color-tip-border: #22c55e;
